--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/mainActivityLayout"
+    android:background="@drawable/background_animation"
     tools:context="com.example.bechitra.walleto.MainActivity">
+
+    <TextView
+        android:id="@+id/walletoText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="Walleto"
+        android:fontFamily="monospace"
+        android:textColor="#00C853"
+        android:textSize="45sp"
+        android:textStyle="normal|bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
+        android:text="Your personal account manager"
+        android:textColor="#3B5998"
+        android:textSize="15sp"
+        android:textStyle="italic" />
 
-</android.support.constraint.ConstraintLayout>
+
+    <Button
+        android:id="@+id/loginFromFacebookButton"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/loginOrRegisterButton"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"
+        android:background="@drawable/fbstyle_button"
+        android:text="login using fb"
+        android:textColorLink="@color/colorPrimaryDark" />
+
+    <Button
+        android:layout_margin="5dp"
+        android:layout_width="220dp"
+        android:background="@drawable/button_design"
+        android:id="@+id/loginOrRegisterButton"
+        android:text="Login / register"
+        android:textSize="16sp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+
+    <Button
+        android:layout_margin="5dp"
+        android:layout_width="220dp"
+        android:text="Run as Guest"
+        android:background="@drawable/button_design"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/loginOrRegisterButton"
+        android:layout_centerHorizontal="true"/>
+
+</RelativeLayout>
