--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid
+        android:color="#66BB6A" />
 
+    <stroke
+        android:color="#9E9E9E"
+        android:width="2dp"/>
+    <corners
+        android:radius="90dp"/>
 </shape>
