--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/navigationHome"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/navigation_menu_home" />
+    <item
+        android:id="@+id/navigationSpending"
+        android:icon="@drawable/ic_spending_24dp"
+        android:title="@string/navigation_menu_spend" />
+    <item
+        android:id="@+id/navigationTransection"
+        android:icon="@drawable/ic_transection_24dp"
+        android:title="@string/navigation_menu_transection" />
+    <item
+        android:id="@+id/navigatinReport"
+        android:icon="@drawable/ic_report_black_24dp"
+        android:title="@string/navigation_menu_report" />
 </menu>
