--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#bdbdbd</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#4CAF50</color>
     <color name="textColor">#F5F5F5</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="green">#4CAF50</color>
+    <color name="blue">#2196F3</color>
+    <color name="red" > #F44336</color>
+    <color name="black" > #000000</color>
+    <color name="colorAccent">#2E7D32</color>
 </resources>
