--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="blue">#2196F3</color>
     <color name="red" > #F44336</color>
     <color name="black" > #000000</color>
+    <color name="gray">#9E9E9E</color>
     <color name="colorAccent">#2E7D32</color>
 </resources>
