--- a/app/src/main/res/layout/earning_dialog.xml
+++ b/app/src/main/res/layout/earning_dialog.xml
@@ -7,6 +7,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
+        android:layout_margin="15dp"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,24 +40,27 @@
                 android:id="@+id/earningAmountEdit"
                 android:background="@drawable/editttext_shape"
                 android:paddingLeft="15dp"
+                android:inputType="number"
                 android:layout_marginBottom="25dp"/>
             <RelativeLayout
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Earning Date"
+                    android:textSize="18dp"
                     android:layout_alignParentLeft="true"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Today"
+                    android:text="TODAY"
                     android:textColor="@color/blue"
                     android:id="@+id/earningDateText"
+                    android:textSize="20dp"
                     android:layout_alignParentRight="true"/>
             </RelativeLayout>
 
