--- a/app/src/main/res/layout/activity_add_spending.xml
+++ b/app/src/main/res/layout/activity_add_spending.xml
@@ -11,7 +11,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,7 +39,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="2.5">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,7 +74,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,7 +103,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -127,7 +131,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1.2">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -157,11 +162,12 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1.2">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@drawable/circle_shape"
             android:textColor="#FFFFFF"
             android:text="Confirm"
