--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="black" > #000000</color>
     <color name="gray">#9E9E9E</color>
     <color name="colorAccent">#2E7D32</color>
+    <color name="fbcolor">#3B5998</color>
+    <color name="amber">#FFC107</color>
 </resources>
