--- a/app/src/main/res/anim/fab_rotate_anticlock.xml
+++ b/app/src/main/res/anim/fab_rotate_anticlock.xml
@@ -4,8 +4,8 @@
 
     <rotate
         android:duration="300"
-        android:fromDegree="45"
-        android:toDegree="0"
+        android:fromDegrees="45"
+        android:toDegrees="0"
         android:interpolator="@android:anim/linear_interpolator"
         android:pivotX="50%"
         android:pivotY="50%"/>
