--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,9 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mainActivityLayout"
     android:orientation="vertical"
     android:layout_margin="10dp">
+
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -14,16 +16,17 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@color/blue"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:layout_margin="5dp"
                 android:padding="8dp"
                 android:orientation="vertical">
@@ -46,10 +49,11 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@color/green"
                 android:layout_weight="1"
                 android:layout_margin="5dp"
+                android:gravity="center_vertical"
                 android:padding="8dp"
                 android:orientation="vertical">
 
@@ -79,7 +83,7 @@
         android:layout_height="0dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:gravity="center"
             android:orientation="vertical">
@@ -107,7 +111,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="$0"
                 android:gravity="center"
                 android:textColor="@color/green"
@@ -126,7 +130,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:orientation="vertical">
 
@@ -139,7 +143,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -254,82 +259,42 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_margin="0dp"
-        android:layout_height="0dp">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_margin="15dp"
-            android:gravity="center"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Excess Spending Alert"
-                android:textColor="@color/black"
-                android:layout_alignParentLeft="true"
-                android:textSize="20sp"/>
-            <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/excessSpendingAlertSwitch"
-                android:layout_alignParentRight="true"/>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
         android:layout_weight="4"
         android:layout_height="0dp"
+        android:id="@+id/clickView"
         android:layout_margin="5dp">
-
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp">
-
-            <com.github.mikephil.charting.charts.PieChart
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:id="@+id/halfPieChart">
-
-            </com.github.mikephil.charting.charts.PieChart>
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_margin="5dp"
-        android:layout_height="0dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_margin="15dp"
-            android:orientation="vertical"
+            android:layout_margin="5dp"
+            android:gravity="center"
             android:layout_height="match_parent">
-
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:background="@color/fbcolor"
-                android:id="@+id/addSpendingText"
-                android:textColor="#FFF"
-                android:text="Add Spending"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Top Category"
+                android:id="@+id/fgh"
+                android:textColor="@color/black"
+                android:paddingLeft="10dp"/>
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/fgh"
+                android:layout_marginLeft="10dp"
                 android:gravity="center"
-                android:layout_height="45dp"
-                android:textSize="25sp"
-                android:textColor="#FFF"
-                android:id="@+id/addEarningText"
-                android:background="@color/green"
-                android:text="Add Earning"/>
+                android:id="@+id/relativeChart"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp">
 
-        </LinearLayout>
+                <com.github.mikephil.charting.charts.PieChart
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/halfPieChart">
+
+                </com.github.mikephil.charting.charts.PieChart>
+
+            </RelativeLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
