--- a/app/src/main/res/layout/layout_earning_recycler.xml
+++ b/app/src/main/res/layout/layout_earning_recycler.xml
@@ -58,6 +58,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:layout_marginBottom="3dp"
                     android:id="@+id/earningRecyclerCategory"
                     android:text="Salary"/>
