--- a/app/src/main/res/layout/excess_spending_alert_dialog.xml
+++ b/app/src/main/res/layout/excess_spending_alert_dialog.xml
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:text="6AM (Default)"
+                android:text="6AM"
                 android:id="@+id/timeTextView"/>
 
         </LinearLayout>
