--- a/app/src/main/res/layout/fragment_spending_earning.xml
+++ b/app/src/main/res/layout/fragment_spending_earning.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
    <android.support.v7.widget.CardView
@@ -9,24 +10,83 @@
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
 
-       <RelativeLayout
+       <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_margin="10dp">
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_alignParentLeft="true"
-               android:textSize="18sp"
-               android:text="Filter by current month"/>
+           android:layout_height="match_parent"
+           android:layout_margin="10dp"
+           android:orientation="vertical">
 
-           <Switch
+           <RelativeLayout
                android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:id="@+id/spendingOrEarningFilterSwitch"
-               android:layout_alignParentRight="true"/>
+               android:layout_height="wrap_content">
 
-       </RelativeLayout>
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentLeft="true"
+                   android:text="Filter by current month"
+                   android:textSize="18sp" />
+
+               <Switch
+                   android:id="@+id/spendingOrEarningFilterSwitch"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginRight="5dp"
+                   android:layout_toLeftOf="@id/toggleView" />
+
+               <RelativeLayout
+                   android:id="@+id/toggleView"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentRight="true"
+                   android:background="@drawable/ic_expand_more_black_24dp" />
+
+           </RelativeLayout>
+
+           <net.cachapa.expandablelayout.ExpandableLayout
+               android:id="@+id/expandableLayout"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               app:el_duration="1000"
+               app:el_expanded="false">
+
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical">
+
+                   <RelativeLayout
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content">
+
+                       <CheckBox
+                           android:id="@+id/calculateAmountCheckBox"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:text="Calculate Amount" />
+
+                       <TextView
+                           android:id="@+id/calculateAmountTextView"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_alignParentRight="true"
+                           android:visibility="gone"
+                           android:text="value"
+                           android:textColor="@color/green"
+                           android:textSize="18dp" />
+                   </RelativeLayout>
+
+                   <CheckBox
+                       android:id="@+id/advanceFilterText"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text="Advance Filter Option" />
+
+               </LinearLayout>
+
+           </net.cachapa.expandablelayout.ExpandableLayout>
+
+       </LinearLayout>
 
    </android.support.v7.widget.CardView>
 
